--- a/app/main/package.json
+++ b/app/main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@foxnorn/main",
+  "name": "@app/main",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "@micro-zoe/micro-app": "1.0.0-rc.2",
+    "@app/components": "workspace:*",
     "vue": "^3.3.10",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "naive-ui": "~2.35.0",
+    "pinia": "~2.1.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.3",
@@ -20,6 +23,7 @@
     "typescript": "^5.3.2",
     "vite": "^5.0.6",
     "vue-tsc": "^1.8.25",
-    "@foxnorn/tsconfig": "workspace:*"
+    "@foxnorn/tsconfig": "workspace:*",
+    "@app/types": "workspace:*"
   }
 }
